// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox select options disabled renders disabled successfully 1`] = `
<CheckboxSelectOption
  className=""
  isDisabled={true}
  onClick={[Function]}
  sendRef={
    [MockFunction] {
      "calls": Array [
        Array [
          <input
            class="pf-c-check__input"
            disabled=""
            id="test"
            type="checkbox"
          />,
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  value="test"
>
  <label
    className="pf-c-check pf-c-select__menu-item pf-m-disabled"
    onKeyDown={[Function]}
  >
    <input
      checked={false}
      className="pf-c-check__input"
      disabled={true}
      id="test"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="pf-c-check__label pf-m-disabled"
    >
      test
    </span>
  </label>
</CheckboxSelectOption>
`;

exports[`checkbox select options hover renders with checked successfully 1`] = `
<CheckboxSelectOption
  className=""
  isChecked={true}
  isDisabled={false}
  onClick={[Function]}
  sendRef={
    [MockFunction] {
      "calls": Array [
        Array [
          <input
            checked=""
            class="pf-c-check__input"
            id="test"
            type="checkbox"
          />,
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  value="test"
>
  <label
    className="pf-c-check pf-c-select__menu-item"
    onKeyDown={[Function]}
  >
    <input
      checked={true}
      className="pf-c-check__input"
      disabled={false}
      id="test"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="pf-c-check__label"
    >
      test
    </span>
  </label>
</CheckboxSelectOption>
`;

exports[`checkbox select options renders with value parameter successfully 1`] = `
<CheckboxSelectOption
  className=""
  isDisabled={false}
  onClick={[Function]}
  sendRef={
    [MockFunction] {
      "calls": Array [
        Array [
          <input
            class="pf-c-check__input"
            id="test"
            type="checkbox"
          />,
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  value="test"
>
  <label
    className="pf-c-check pf-c-select__menu-item"
    onKeyDown={[Function]}
  >
    <input
      checked={false}
      className="pf-c-check__input"
      disabled={false}
      id="test"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="pf-c-check__label"
    >
      test
    </span>
  </label>
</CheckboxSelectOption>
`;
